--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "boozt-test",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://sadaffara.github.io",
+  "homepage": "https://sadaffara.github.io/boozt-test",
   "dependencies": {
     "-": "0.0.1",
     "@testing-library/jest-dom": "^5.16.1",
