--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "reactstrap": "^9.0.1",
+    "sass": "^1.49.0",
     "save-dev": "0.0.1-security",
     "web-vitals": "^2.1.3"
   },
